--- a/how-to-play.html
+++ b/how-to-play.html
@@ -139,7 +139,7 @@
         <div class="pics">
             <div class="left-most">
                 <img src="./assets/images/left-most-p.png" alt="">
-                <h1>WIN BIG. DRAW MORE.</h1>
+                <h1>WIN BIG. <br> DRAW MORE.</h1>
                 <p>Secure payments & withdrawals</p>
             </div>
             <div class="left">
@@ -201,7 +201,7 @@
 
     <footer>
         <!-- <img src="./assets/images/footer.png" id="footer-img" /> -->
-        <img src="./assets/images/mobile/footer.svg" id="footer-img-m" />
+        <img src="./assets/images/Group 9223.png" id="footer-img-m" />
         <div id="footer-content">
             <div id="footer-content-left">
                 <div id="footer-content-logo-wrapper">
@@ -233,47 +233,47 @@
                     </p>
                     <div id="pm-subcard">
                         <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
-                        <!-- <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
-                  <span id="subcard-footer-text"
-                    ><span id="subcard-footer-text-heading">Lights Out</span> By
-                    Podium Pe</span
-                  >
-                  <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" /> -->
                         <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow">
                     </div>
                 </div>
             </div>
         </div>
         <div id="footer-content-m">
-            <li><a href="TermsAndService.html" class="footer-links">Terms & Conditions</a></li>
-            <li><a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a></li>
-            <li><a href="help-support.html" class="footer-links">Help & Support</a></li>
-            <div id="footer-card">
-                <div id="footer-card-header">
-                    <!-- <div id="footer-card-header-m-logo">
-                  <img src="./assets/images/logo2.svg" />
-                </div>
-    
-                <span id="footer-card-hearer-text"
-                  ><span id="footer-card-hearer-text-heading">Lights Out</span> By
-                  Podium Pe</span
-                > -->
-                    <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
-                    <img class="arrow-footer" src="./assets/images/arrowblack.png" id="subcard-footer-arrow" />
-                </div>
-                <p>
-                    Explore our community of car enthusiasts for more engaging discussions.
-                </p>
+            <div class="foot-link-div">
+                <a href="TermsAndService.html" class="footer-link">Terms & Conditions</a>
+                <a href="PrivacyPolicy.html" class="footer-link center-align">Privacy Policy</a>
+                <a href="help-support.html" class="footer-link right-align">Help & Support</a>
+            </div>
+            <div class="li-underln">
+                <div class="line l-div"></div>
+                <div class="line"></div>
+                <div class="line r-div"></div>
             </div>
             <div id="footer-subcard">
                 <div id="footer-subcard-logo">
                     <img src="./assets/images/blogo.svg" />
                 </div>
                 <div id="footer-subcard-content">
-                    <h4>Podium Pe</h4>
-                    <p>A Product of Shortsqueeze Pvt Ltd.</p>
+                    <div class="left-side">
+                        <h4 class="podiumpe-head-mobile-footer">Podium Pe</h4>
+                        <p class="podiumpe-text-mobile-footer">A Product of <br>Shortsqueeze Pvt Ltd.</p>
+                    </div>
+                    <div>
+                        <p class="copyright-text-mobile">Copyright <br>@2023</p>
+                    </div>
                 </div>
             </div>
+            <div id="footer-card">
+                <p class="footer-text-racingline">
+                    Explore our community of car enthusiasts for more engaging discussions.
+                </p>
+                <div class="footer-logo-div-racingline">
+                    <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
+                    <img class="arrow-footer" src="./assets/images/arrowblack.png" id="subcard-footer-arrow" />
+                </div>
+
+            </div>
+
         </div>
     </footer>
 
