--- a/index.html
+++ b/index.html
@@ -460,6 +460,11 @@
         <a href="PrivacyPolicy.html" class="footer-link center-align">Privacy Policy</a>
         <a href="help-support.html" class="footer-link right-align">Help & Support</a>
       </div>
+      <div class="li-underln">
+        <div class="line l-div"></div>
+        <div class="line"></div>
+        <div class="line r-div"></div>
+      </div>
       <div id="footer-subcard">
         <div id="footer-subcard-logo">
           <img src="./assets/images/blogo.svg" />
