--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
           <h4 class="pp-title">PodiumPe</h4>
           <div class="res-line"></div>
           <ul id="nav-menu">
-            <a class="res-link" href="./index.html">
-              <li>Home</li>
+            <a class="navbar-active res-link"  href="./index.html">
+              <img class="navbar-polygon" src="/assets/images/Polygon .png" alt="polygon">
+              <li class="li-active">Home</li>
             </a>
             <a href="./about.html">
               <li>About</li>
