Update index.html to make the new html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div id="card-content">
             <div class="fantasy">
               <div class="side-line"></div>
-              <h2>ENTER THE RALLY OF FANTASY MOTORSPORTS</h2>
+              <h2><span>ENTER THE RALLY OF</span> <br>FANTASY MOTORSPORTS</h2>
             </div>
             <div id="download-options-wrapper">
               <img
@@ -165,13 +165,15 @@
               FANTASY MOTORSPORTS
             </h2>
             <div id="download-options-wrapper-m">
-              <!-- <p>*Coming Soon</p> -->
+              <div class="app-store-m">
+              <p>*Coming Soon</p>
               <img
                 class="download-options-m"
                 src="./assets/images/app-store.png"
                 alt="play-store"
                 loading="lazy"
               />
+                </div>
               <img
                 class="download-options-m"
                 src="./assets/images/play-store.png"
@@ -179,7 +181,6 @@
                 loading="lazy"
               />
             </div>
-            <img class="download-options-m" src="./assets/images/play-store.png" alt="play-store" loading="lazy" />
           </div>
         </div>
       </div>
