--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -81,7 +81,7 @@
         <option><a href="/about.html">Privacy Policy</a></option>
       </select> -->
       <div class="md-terms" onclick="toggleMenu()">
-        <p>Terms & Policies</p>
+        <p>Privacy Policy</p>
         <img class="md-img" src="/assets/images/arrowdownterms.png" alt="downarrow">
       </div>
       <div class="md-border"></div>
