--- a/help-support.html
+++ b/help-support.html
@@ -82,7 +82,7 @@
         <option><a href="/about.html">Privacy Policy</a></option>
       </select> -->
         <div class="md-terms" onclick="toggleMenu()">
-          <p>Terms & Policies</p>
+          <p>Help and Support</p>
           <img
             class="md-img"
             src="/assets/images/arrowdownterms.png"
