--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -71,7 +71,10 @@
       <h1>TERMS & POLICIES</h1>
       <div id="red-line"></div>
       <div id="doc-nav">
-        <div class="doc-nav-item  active">Privacy Policy</div>
+        <div class="underscore">
+          <div class="doc-nav-item  active">Privacy Policy</div>
+          <div class="half-line"></div>
+        </div>
         <div class="doc-nav-item"><a href="TermsAndService.html">Terms of Service</a></div>
         <div class="doc-nav-item"><a href="help-support.html">Help & Support</a></div>
       </div>
