--- a/TermsAndService.html
+++ b/TermsAndService.html
@@ -74,7 +74,10 @@
             <div id="red-line"></div>
             <div id="doc-nav">
                 <div class="doc-nav-item"><a href="PrivacyPolicy.html">Privacy Policy</a></div>
-                <div class="doc-nav-item active">Terms of Service</div>
+                <div class="underscore">
+                    <div class="doc-nav-item active">Terms of Service</div>
+                    <div class="half-line"></div>
+                </div>
                 <div class="doc-nav-item"><a href="help-support.html">Help & Support</a></div>
             </div>
         </section>
