--- a/help-support.html
+++ b/help-support.html
@@ -74,7 +74,10 @@
       <div id="doc-nav">
         <div class="doc-nav-item"><a href="PrivacyPolicy.html">Privacy Policy</a></div>
         <div class="doc-nav-item"><a href="TermsAndService.html">Terms of Service</a></div>
-        <div class="doc-nav-item active">Help & Support</div>
+        <div class="underscore">
+          <div class="doc-nav-item active">Help & Support</div>
+          <div class="half-line"></div>
+        </div>
       </div>
     </section>
     <div id="mobile-dropdown">
