added title and metatags

--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="./assets/styles/mobile.css" />
   <link rel="stylesheet" href="./assets/styles/toc.css" />
   <link rel="stylesheet" href="./assets/styles/toc-mobile.css" />
-  <title>Document</title>
+    <title>PodiumPe | Privacy Policy</title>
+  <meta name="keywords" content="Privacy Policy, PodiumPe, fantasy motorsports">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
 </head>
 
 <body>
@@ -75,7 +77,7 @@
           <div class="doc-nav-item  active">Privacy Policy</div>
           <div class="half-line"></div>
         </div>
-        <div class="doc-nav-item"><a href="TermsAndService.html">Terms of Service</a></div>
+        <div class="doc-nav-item"><a href="TermsAndService.html">Terms and Conditions</a></div>
         <div class="doc-nav-item"><a href="help-support.html">Help & Support</a></div>
       </div>
     </section>
@@ -91,7 +93,7 @@
       <div class="dropdown-m-menu">
         <a href="/PrivacyPolicy.html" class="dropdown-m-links dr-top"> <h4>Privacy Policy</h4> </a>
         <div class="dropdown-m-border"></div>
-        <a href="./TermsAndService.html" class="dropdown-m-links"> <h4>Terms of Service</h4> </a>
+        <a href="./TermsAndService.html" class="dropdown-m-links"> <h4>Terms and Conditions</h4> </a>
         <div class="dropdown-m-border"></div>
         <a href="./help-support.html" class="dropdown-m-links dr-bottom"> <h4>Help and Support</h4> </a>
       </div>
