--- a/TermsAndService.html
+++ b/TermsAndService.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="./assets/styles/toc.css" />
   <link rel="stylesheet" href="./assets/styles/toc-mobile.css" />
 
-  <title>Document</title>
+  <title>PodiumPe | Terms and Conditions</title>
+  <meta name="keywords" content="Terms and Conditions, PodiumPe, fantasy motorsports">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
 </head>
 
 <body>
@@ -74,7 +76,7 @@
       <div id="doc-nav">
         <div class="doc-nav-item"><a href="/PrivacyPolicy.html"> Privacy Policy </a></div>
         <div class="underscore">
-          <div class="doc-nav-item active">Terms of Service</div>
+          <div class="doc-nav-item active">Terms and Conditions</div>
           <div class="half-line"></div>
         </div>
         <div class="doc-nav-item"><a href="/help-support.html"> Help & Support</a></div>
@@ -85,7 +87,7 @@
               <option><a href="/about.html">Privacy Policy</a></option>
             </select> -->
       <div class="md-terms" onclick="toggleMenu()">
-        <p>Terms & Policies</p>
+        <p>Terms and Conditions</p>
         <img class="md-img" src="/assets/images/arrowdownterms.png" alt="downarrow" />
       </div>
       <div class="md-border"></div>
@@ -95,7 +97,7 @@
         </a>
         <div class="dropdown-m-border"></div>
         <a href="./TermsAndService.html" class="dropdown-m-links">
-          <h4>Terms of Service</h4>
+          <h4>Terms and Conditions</h4>
         </a>
         <div class="dropdown-m-border"></div>
         <a href="./help-support.html" class="dropdown-m-links dr-bottom">
