--- a/about.html
+++ b/about.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./assets/styles/about-mobile.css" />
     <link rel="stylesheet" href="./assets/styles/styles.css" />
     <link rel="stylesheet" href="./assets/styles/mobile.css" />
-    <title>About</title>
+  <title>PodiumPe | About Us</title>
+  <meta name="keywords" content="Abouts us, PodiumPe, fantasy motorsport, Racing, motorsports">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
   </head>
   <body>
     <header class="header">
