--- a/help-support.html
+++ b/help-support.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="./assets/styles/toc.css" />
   <link rel="stylesheet" href="./assets/styles/toc-mobile.css" />
   <link rel="stylesheet" href="./assets/styles/help.css" />
-  <title>Document</title>
+    <title>PodiumPe | Help and Support</title>
+  <meta name="keywords" content="Help and Supports, PodiumPe, fantasy motorsports">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
 </head>
 
 <body>
@@ -73,7 +75,7 @@
       <div id="red-line"></div>
       <div id="doc-nav">
         <div class="doc-nav-item"><a href="PrivacyPolicy.html">Privacy Policy</a></div>
-        <div class="doc-nav-item"><a href="TermsAndService.html">Terms of Service</a></div>
+        <div class="doc-nav-item"><a href="TermsAndService.html">Terms and Conditions</a></div>
         <div class="underscore">
           <div class="doc-nav-item active">Help & Support</div>
           <div class="half-line"></div>
@@ -99,7 +101,7 @@
           </a>
           <div class="dropdown-m-border"></div>
           <a href="./TermsAndService.html" class="dropdown-m-links">
-            <h4>Terms of Service</h4>
+            <h4>Terms and Conditions</h4>
           </a>
           <div class="dropdown-m-border"></div>
           <a href="./help-support.html" class="dropdown-m-links dr-bottom">
