--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>PodiumPe | Racing is our religion</title>
   <meta name="description"
     content="Rev up your fantasy gaming experience with PodiumPe - the ultimate online platform dedicated to motorsport enthusiasts! Create your dream team, compete against fellow fans, and conquer the virtual racetrack. Get in pole position and fuel your passion for motorsport with PodiumPe!">
-  <meta name="keywords" content="Formula1, Racing, motorsports">
+  <meta name="keywords" content="Formula1, Racing, motorsports, fantasy motorsports">
   <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
   <link rel="stylesheet" href="./assets/styles/styles.css" />
   <link rel="stylesheet" href="./assets/styles/mobile.css" />
