--- a/how-to-play.html
+++ b/how-to-play.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
-    <title>How To Play</title>
+    <title>PodiumPe | How to Play</title>
+    <meta name="keywords" content="How to Play, PodiumPe, fantasy motorsport, Racing, motorsports">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
 </head>
 
 <body>
