fix line and img

--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
           <div class="hero-right-border rborder-3"></div>
         </div>
         <!-- car img -->
-        <img class="hero-car" src="/assets/images/carblack.png" alt="car" />
+        <img class="hero-car" src="/assets/images/carhero.png" alt="car" />
         <!--car front text -->
         <div class="car-front-text">
           <div class="carf-row1">
