--- a/TermsAndService.html
+++ b/TermsAndService.html
@@ -37,8 +37,13 @@
           <a href="./how-to-play.html">
             <li>How to play</li>
           </a>
-          <a class="res-link" href="./TermsAndService.html">
-            <li>Terms & Policies</li>
+          <a class="navbar-active res-link" href="./TermsAndService.html">
+            <img
+                class="navbar-terms-polygon"
+                src="/assets/images/Polygon .png"
+                alt="polygon"
+              />
+            <li class="li-active">Terms & Policies</li>
           </a>
         </ul>
         <svg class="res-x-logo" xmlns="http://www.w3.org/2000/svg" width="228" height="38" viewBox="0 0 228 38"
