fix changes to footer at all pages

--- a/help-support.html
+++ b/help-support.html
@@ -303,40 +303,44 @@
     <!-- <img src="./assets/images/footer.png" id="footer-img" /> -->
     <img src="./assets/images/Group 9223.png" id="footer-img-m" />
     <div id="footer-content">
-      <div id="footer-content-left">
-        <div id="footer-content-logo-wrapper">
-          <div id="pm-logo">
-            <img src="./assets/images/blogo.svg" />
-          </div>
-          <div id="pm-text">
-            <small>Podium Pe</small>
-            <span>A Product of Shortsqueeze Pvt Ltd.</span>
-          </div>
-        </div>
-        <div id="copyright">Copyright @2023</div>
-      </div>
-      <div id="footer-content-right">
-        <div id="pm-nav">
-          <div class="pm-nav-items">
-            <a href="TermsAndService.html" class="footer-links">Terms & Conditions</a>
-          </div>
-          <div class="pm-nav-items">
-            <a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a>
-          </div>
-          <div class="pm-nav-items">
-            <a href="help-support.html" class="footer-links">Help & Support</a>
+      <div class="footer-content-top">
+        <div id="footer-content-left">
+          <div id="footer-content-logo-wrapper">
+            <div id="pm-logo">
+              <img src="./assets/images/blogo.svg" />
+            </div>
+            <div id="pm-text">
+              <small>Podium Pe</small>
+              <span>A Product of Shortsqueeze Pvt Ltd.</span>
+            </div>
           </div>
         </div>
-        <div id="pm-card">
-          <p id="pm-card-text">
-            Explore our community of car enthusiasts for more engaging discussions.
-          </p>
-          <div id="pm-subcard">
-            <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
-            <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow">
+        <div id="footer-content-right">
+          <div id="pm-nav">
+            <div class="pm-nav-items">
+              <a href="TermsAndService.html" class="footer-links">Terms & Conditions</a>
+            </div>
+            <div class="pm-nav-items">
+              <a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a>
+            </div>
+            <div class="pm-nav-items">
+              <a href="help-support.html" class="footer-links">Help & Support</a>
+            </div>
           </div>
         </div>
       </div>
+      <div class="footer-content-bottom">
+          <div id="copyright">Copyright @2023</div>
+          <div id="pm-card">
+            <p id="pm-card-text">
+              Explore our community of car enthusiasts for more engaging discussions.
+            </p>
+            <div id="pm-subcard">
+              <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
+              <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow">
+            </div>
+          </div>
+      </div>  
     </div>
     <div id="footer-content-m">
       <div class="foot-link-div">
