fix mobile version (strips)

--- a/index.html
+++ b/index.html
@@ -468,8 +468,44 @@
     </div>
     <div class="strip" id="phn-strip">
       <img src="./assets/images/phn.png" class="strip-img" />
-      <img src="./assets/images/mobile/phone.png" class="strip-img-m" />
+      <!-- <img src="./assets/images/mobile/phone.png" class="strip-img-m" /> -->
     </div>
+    <!-- changes done -->
+    <div class="phone-s-download">
+      <div class="phone-s-x-section">
+        <p>PODIUM PE</p>
+        <p>PODIUM PE</p>
+        <p>PODIUM PE</p>
+        <p>PODIUM PE</p>
+        <p>PODIUM PE</p>
+        <p>PODIUM PE</p>
+      </div>
+      <img class="phone-img-mobile" src="/assets/images/mobile/mobile.png" alt="mobile">
+      <div class="phone-strip-mobile">
+        <div class="phone-small-strip-mobile">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun</p>
+        </div>
+        <div class="phone-middle-strip">
+          <p>
+            <marquee>COMING SOON</marquee></p>
+        </div>
+        <div class="phone-small-strip-mobile">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun</p>
+        </div>
+      </div>
+      <div class="phone-strip-mobile-2">
+        <div class="phone-small-strip-mobile">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun</p>
+        </div>
+        <div class="phone-middle-strip">
+          <p><marquee>COMING SOON</marquee></p>
+        </div>
+        <div class="phone-small-strip-mobile">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun</p>
+        </div>
+      </div>
+    </div>
+    <!-- changes done end -->
     <section id="final">
       <div id="final-content-wrapper">
         <p>
